# camera-tracking-

./: .gitignore  README.md  pyproject.toml
src/human_demo_py/: __main__.py  config.py  depthai_utils.py  height.py  shape.py
src/human_demo_py/utils/: global_settings.py
