[project]
name = "human-demo-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Cristian Iordachescu", email = "cristian.iordachescu@ivfuture.uk" },
]
dependencies = [
    "depthai>=2.27.0.0",
    "numpy<2.0.0",
    "depthai-sdk>=1.15.0",
    "scipy>=1.14.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
dev = "python -m human_demo_py"

[tool.pdm]
distribution = true

[tool.pdm.resolution]
prefer-binary = ":all:"
