[project]
name = "human-demo-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Cristian Iordachescu", email = "cristian.iordachescu@ivfuture.uk" },
]
dependencies = [
    "depthai>=2.27.0.0",
    "numpy<2.0.0",
    "depthai-sdk>=1.15.0",
    "scipy>=1.14.0",
    "concurrent-log-handler>=0.9.25",
    "imutils>=0.5.4",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic-settings>=2.5.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
dev.cmd = "python -m human_demo_py"
dev.env = { DEBUG = "true" }
devf.cmd = "fastapi dev src/human_demo_py/__main__.py"
devf.env = { DEBUG = "true" }

[tool.pdm.dev-dependencies]
dev = ["wheel>=0.44.0", "setuptools>=73.0.1"]

[tool.pdm]
distribution = true

[tool.pdm.resolution]
prefer-binary = ":all:"
